[GTK][WPE] Revamp focus rings https://bugs.webkit.org/show_bug.cgi?id=241228

Reviewed by NOBODY (OOPS!).

Use semi-transparent accent-colored focus rings, like macOS or GTK4.
Round them for radios and scales. Make sure to support CSS accent-color
for checks, radios and scales.

Use the same opacity as the libadwaita high contrast style and not the
regular one - the regular one doesn't work well on colorful backgrounds
like most webpages. This is also closer to the macOS style.

Make ThemeAdwaita::focusColor() private as it's both unused and doesn't
make much sense to be called from outside anymore.

This should fix the issue with modern media controls turning black
when focused.

* Source/WebCore/platform/adwaita/ThemeAdwaita.cpp:
(WebCore::ThemeAdwaita::focusColor):
(WebCore::getRectRadius):
(WebCore::ThemeAdwaita::paintFocus):
(WebCore::ThemeAdwaita::paintCheckbox):
(WebCore::ThemeAdwaita::paintRadio):
(WebCore::ThemeAdwaita::paintButton):
* Source/WebCore/platform/adwaita/ThemeAdwaita.h:
* Source/WebCore/rendering/RenderThemeAdwaita.cpp:
(WebCore::RenderThemeAdwaita::platformFocusRingColor const):
(WebCore::RenderThemeAdwaita::systemColor const):
(WebCore::RenderThemeAdwaita::paintTextField):
(WebCore::RenderThemeAdwaita::paintMenuList):
(WebCore::RenderThemeAdwaita::paintSliderTrack):